# crowServer

./: CMakeLists.txt  README.md  TODO.md  main.cpp  struct Request {.rs
include/reflect-utils/parser/: error.hpp  parser.hpp
include/reflect-utils/validator/: Field.hpp  error.hpp  rule.cpp  rule.hpp  tuple.hpp  validator.hpp
include/utils/: parser.hpp  validator.cpp  validator.hpp
reflect-cpp/include/rfl/bson/: Reader.hpp
reflect-cpp/include/rfl/internal/: to_ptr_named_tuple.hpp
reflect-cpp/include/rfl/json/: Reader.hpp  read.hpp
reflect-cpp/include/rfl/parsing/: NamedTupleParser.hpp  Parser_default.hpp  ViewReader.hpp
reflect-cpp/src/: reflectcpp.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  abc  abc.cpp  cmake_install.cmake  main.cpp  yyjson.pc
tests/: validator_test.cpp
validator/: validator.cpp  validator.hpp
